--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -11,6 +11,10 @@
                     {% if user.last_seen %}
                         <p><i>Last seen on: {{ user.last_seen }}</i></p>
                     {% endif %}
+                    <!-- Only let a user edit their own profile -->
+                    {% if user.id == g.user.id %}
+                        <p><a href="{{ url_for('edit') }}">Edit</a></p>
+                    {% endif %}
             </td>
         </tr>
     </table>
