adding follow/unfollow links to user pages

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -11,10 +11,16 @@
                     {% if user.last_seen %}
                         <p><i>Last seen on: {{ user.last_seen }}</i></p>
                     {% endif %}
+                <p>{{ user.followers.count() }} followers |
                     <!-- Only let a user edit their own profile -->
                     {% if user.id == g.user.id %}
-                        <p><a href="{{ url_for('edit') }}">Edit</a></p>
+                        <a href="{{ url_for('edit') }}">Edit</a>
+                    {% elif not g.user.is_following(user) %}
+                        <a href="{{ url_for('follow', nickname=user.nickname)}}">Follow</a>
+                    {% else %}
+                        <a href="{{ url_for('unfollow', nickname=user.nickname)}}">Unfollow</a>
                     {% endif %}
+                </p>
             </td>
         </tr>
     </table>
