--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hello, {{ user.nickname }}!</h1>
+    <h1>Guten Tag, {{ user.nickname }}!</h1>
+    <form action="" method="post" name="post">
+        {{ form.hidden_tag() }}
+        <table>
+            <tr>
+                <td>Declare something:</td>
+                <td>{{ form.post(size=30, maxlength=140) }}</td>
+                <td>
+                    {% for error in form.post.errors %}
+                    <span style="color: red;">[{{ error }}]</span><br>
+                    {% endfor %}
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="submit" value="Post!"></td>
+                <td></td>
+            </tr>
+        </table>
+    </form>
     {% for post in posts %}
-    <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
+    <p>
+        {{ post.author.nickname }} says: <b>{{ post.body }}</b>
+    </p>
     {% endfor %}
 {% endblock %}
