--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Guten Tag, {{ user.nickname }}!</h1>
+    <h1>Guten Tag, {{ g.user.nickname }}!</h1>
     <form action="" method="post" name="post">
         {{ form.hidden_tag() }}
         <table>
