--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,9 +22,16 @@
             </tr>
         </table>
     </form>
-    {% for post in posts %}
+    <!-- posts in a Paginate object -->
+    {% for post in posts.items %}
     <p>
         {{ post.author.nickname }} says: <b>{{ post.body }}</b>
     </p>
     {% endfor %}
+    {% if posts.has_prev %}
+        <a href="{{ url_for('index', page=posts.prev_num) }}">&lt;&lt; Newer posts</a>
+    {% else %}&lt;&lt; Newer Posts{% endif %}
+    {% if posts.has_next %}
+        <a href="{{ url_for('index', page=posts.next_num) }}">Older posts &gt;&gt;</a>
+    {% else %}Older Posts &gt;&gt;{% endif %}
 {% endblock %}
