adding in posts.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,9 +24,7 @@
     </form>
     <!-- posts in a Paginate object -->
     {% for post in posts.items %}
-    <p>
-        {{ post.author.nickname }} says: <b>{{ post.body }}</b>
-    </p>
+        {% include 'post.html' %}
     {% endfor %}
     {% if posts.has_prev %}
         <a href="{{ url_for('index', page=posts.prev_num) }}">&lt;&lt; Newer posts</a>
