Adding pagination to user profile/posts

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
     {% endfor %}
     {% if posts.has_prev %}
         <a href="{{ url_for('index', page=posts.prev_num) }}">&lt;&lt; Newer posts</a>
-    {% else %}&lt;&lt; Newer Posts{% endif %}
+    {% else %}&lt;&lt; Newer Posts{% endif %} |
     {% if posts.has_next %}
         <a href="{{ url_for('index', page=posts.next_num) }}">Older posts &gt;&gt;</a>
     {% else %}Older Posts &gt;&gt;{% endif %}
