--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -26,6 +26,12 @@
     </table>
     <hr>
     {% for post in posts %}
-        {% include "post.html" %}
+        {% include 'post.html' %}
     {% endfor %}
+    {% if.posts.has_prev %}
+        <a href="{{ url_for('user', nickname=user.nickname, page=posts.prev_num) }}">&lt;&lt; Newer posts</a>
+    {% else %}&lt;&lt; Newer posts{% endif %} |
+    {% if.posts.has_next %}
+        <a href="{{ url_for('user', nickname=user.nickname, page=posts.next_num) }}">&gt;&gt; Older posts</a>
+    {% else %}&gt;&gt; Older posts{% endif %}
 {% endblock %}
