--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -25,13 +25,13 @@
         </tr>
     </table>
     <hr>
-    {% for post in posts %}
-        {% include 'post.html' %}
+    {% for post in posts.items %}
+        {% include "post.html" %}
     {% endfor %}
-    {% if.posts.has_prev %}
+    {% if posts.has_prev %}
         <a href="{{ url_for('user', nickname=user.nickname, page=posts.prev_num) }}">&lt;&lt; Newer posts</a>
     {% else %}&lt;&lt; Newer posts{% endif %} |
-    {% if.posts.has_next %}
-        <a href="{{ url_for('user', nickname=user.nickname, page=posts.next_num) }}">&gt;&gt; Older posts</a>
-    {% else %}&gt;&gt; Older posts{% endif %}
+    {% if posts.has_next %}
+        <a href="{{ url_for('user', nickname=user.nickname, page=posts.next_num) }}">Older posts &gt;&gt;</a>
+    {% else %}Older posts &gt;&gt;{% endif %}
 {% endblock %}
