updating templates with Bootstrap

--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -11,7 +11,7 @@
                 <td>
                     {{ form.nickname(size=24) }}
                     {% for error in form.errors.nickname %}
-                    <br><span style="color: red;">[{{ error }}]</span>
+                    <br><div class="alert alert-warning" role="alert">{{ error }}</span>
                     {% endfor %}
                 </td>
             </tr>
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td><input type="submit" value="Save Changes"></td>
+                <td><input type="submit" class="btn btn-primary" value="Save Changes"></td>
             </tr>
         </table>
     </form>
