--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,30 +1,59 @@
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="/static/img/favicon.ico">
+
         {% if title %}
         <title> {{ title }} - picoblog</title>
         {% else %}
         <title>Welcome to picoblog!</title>
         {% endif %}
+        <!-- Bootstrap -->
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
+        <script src="/static/js/moment.min.js"></script>
     </head>
     <body>
-        <div>Picoblog:<br>
-            <a href="{{ url_for('index') }}">Home</a>
-            {% if g.user.is_authenticated %}
-            | <a href="{{ url_for('user', nickname=g.user.nickname) }}">Profile</a>
-            | <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
-        </div>
-        <hr>
+        <!-- Navbar -->
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ url_for('index') }}">Picoblog</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{ url_for('index') }}">Home</a></li>
+                        {% if g.user.is_authenticated %}
+                        <li><a href="{{ url_for('user', nickname=g.user.nickname) }}">Profile</a></li>
+                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            <hr>
+            <hr>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul>
                 {% for message in messages %}
-                    <li>{{ message }}</li>
+                    <div class="alert alert-info" role="alert">{{ message }}</div>
                 {% endfor %}
                 </ul>
             {% endif %}
         {% endwith %}
-        <hr>
         {% block content %}{% endblock %}
+        </div>
     </body>
 </html>
