--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,7 +22,7 @@ function set_openid(openid, pr)
             Please enter your OpenID:<br>
             {{ form.openid(size=80) }}<br>
             {% for error in form.openid.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+                <div class="alert alert-warning" role="alert">{{ error }}</div>
             {% endfor %}<br>
             |{% for pr in providers %}
             <a href="javascript:set_openid('{{ pr.url }}', '{{ pr.name }}');">{{ pr.name }}</a>|
