--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,21 +4,21 @@
 {% block content %}
     <table>
         <tr valign="top">
-            <td><img src="{{ user.avatar(128) }}"></td>
+            <td><img src="{{ user.avatar(128) }}" alt="User Avatar"></td>
             <td>
                 <h1>User: {{ user.nickname }}</h1>
                     {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                     {% if user.last_seen %}
-                        <p><i>Last seen on: {{ user.last_seen }}</i></p>
+                        <p><em>Last seen: {{ momentjs(user.last_seen).calendar() }}</em></p>
                     {% endif %}
                 <p>{{ user.followers.count() }} followers |
                     <!-- Only let a user edit their own profile -->
                     {% if user.id == g.user.id %}
-                        <a href="{{ url_for('edit') }}">Edit</a>
+                        <a href="{{ url_for('edit') }}" class="btn btn-primary">Edit Profile</a>
                     {% elif not g.user.is_following(user) %}
-                        <a href="{{ url_for('follow', nickname=user.nickname)}}">Follow</a>
+                        <a href="{{ url_for('follow', nickname=user.nickname)}}" class="btn btn-primary">Follow</a>
                     {% else %}
-                        <a href="{{ url_for('unfollow', nickname=user.nickname)}}">Unfollow</a>
+                        <a href="{{ url_for('unfollow', nickname=user.nickname)}}" class="btn btn-primary">Unfollow</a>
                     {% endif %}
                 </p>
             </td>
@@ -28,10 +28,12 @@
     {% for post in posts.items %}
         {% include "post.html" %}
     {% endfor %}
+    <ul class="pager">
     {% if posts.has_prev %}
-        <a href="{{ url_for('user', nickname=user.nickname, page=posts.prev_num) }}">&lt;&lt; Newer posts</a>
-    {% else %}&lt;&lt; Newer posts{% endif %} |
+        <li><a href="{{ url_for('user', nickname=user.nickname, page=posts.prev_num) }}">&lt;&lt; Newer posts</a></li>
+    {% else %}<li class="disabled"><a href="#">&lt;&lt; Newer posts</a></li>{% endif %}
     {% if posts.has_next %}
-        <a href="{{ url_for('user', nickname=user.nickname, page=posts.next_num) }}">Older posts &gt;&gt;</a>
-    {% else %}Older posts &gt;&gt;{% endif %}
+        <li><a href="{{ url_for('user', nickname=user.nickname, page=posts.next_num) }}">Older posts &gt;&gt;</a></li>
+    {% else %}<li class="disabled"><a href="#">Older posts &gt;&gt;</a></li>{% endif %}
+    </ul>
 {% endblock %}
