move delete post button

--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -3,10 +3,12 @@
         <img class="media-object" src="{{ post.author.avatar(50) }}">
     </a>
     <div class="media-body">
-        <h4 class="media-heading">{{ post.author.nickname }} said {{ momentjs(post.timestamp).fromNow() }}:</h4>
+        <h4 class="media-heading">
+            {{ post.author.nickname }} said {{ momentjs(post.timestamp).fromNow() }}:
+        </h4>
         <p>{{ post.body }}</p>
         {% if post.author.id == g.user.id %}
-        <a href="{{ url_for('delete', id=post.id) }}" class="btn btn-xs btn-danger">Delete Post</a>
+        <p><a href="{{ url_for('delete', id=post.id) }}" class="btn btn-xs btn-danger">Delete Post</a></p>
         {% endif %}
     </div>
 </div>
