change login button

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -29,6 +29,6 @@ function set_openid(openid, pr)
             {% endfor %}
         </p>
         <p>{{ form.remember_me }} Remember Me</p>
-        <p><input type="submit" value="Sign In"></p>
+        <p><input type="submit" class="btn btn-primary">"Sign In"</p>
     </form>
 {% endblock %}
